2002-11-20  James Henstridge  <james@daa.com.au>

	* codegen/argtypes.py (PyObjectArg): arg matcher for "PyObject*"
	args, from bug #98822.

2002-11-19  James Henstridge  <james@daa.com.au>

	* gtk/libglade.override (_wrap_glade_xml_get_widget_prefix): add
	wrapper.

	* gtk/gtkobject-support.c: get rid of pyg_handler_marshal and
	pyg_input_marshal, which were the last bits of code using the old
	GtkArg APIs in gtk.

	* gtk/gtk.override: remove wrappers for gtk_idle_add,
	gtk_timeout_add and gtk_input_add.
	(_wrap_gtk_quit_add): change so that it doesn't use
	pyg_handler_marshal.

	* gtk/__init__.py: set the TRUE and FALSE constants to True and
	False if possible.  Fall back to 0/1 otherwise.
	(*): bind idle, timeout and input functions to gobject equivalents.

	* gobjectmodule.c (get_handler_priority): helper function to get
	priority value as a keyword argument.
	(pyg_idle_add): convert priority arg to an optional keyword
	argument.
	(pyg_timeout_add): and here.
	(pyg_io_add_watch): and here.

2002-11-18  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (pyg_idle_add): add a wrapper for g_idle_add.
	(pyg_timeout_add): and a wrapper for g_timeout_add.
	(pyg_io_add_watch): and a wrapper for g_io_add_watch.
	(initgobject): add constants.

2002-11-16  James Henstridge  <james@daa.com.au>

	* pygobject.c (pygobject_connect_object): set up closure
	correctly.  Fix from bug #96922.
	(pygobject_connect_object_after): and here.

	* gtk/gtk.override (_wrap_gtk_text_view_buffer_to_window_coords):
	(_wrap_gtk_text_view_window_to_buffer_coords): wrap functions.

	* pango.override: fix up calls to pyg_enum_get_value() so that it
	doesn't throw an exception when it shouldn't.
	(_wrap_pango_layout_get_pixel_extents): call get_pixel_extents()
	like it is supposed to.  Fixes bug #93569.

	* pygtype.c (pyg_value_from_pyobject): if python object is None,
	set GValue to NULL for boxed, pointer and GObject types.
	(pyg_value_as_pyobject): convert G_TYPE_POINTER values to