@@ -1,3 +1,11 @@
+2002-11-20  Joe Shaw  <joe@ximian.com>
+
+	* gtk.override (_wrap_gtk_menu_attach_to_widget): Added.  Fixes
+	#97963.
+
+	* pygtktreemodel.c: Add wrap all calls to PyObject_CallMethod() in
+	pyg_block_threads() and pyg_unblock_threads().  Fixes #98344.
+
 2002-11-20  James Henstridge  <james@daa.com.au>
 
 	* codegen/argtypes.py (PyObjectArg): arg matcher for "PyObject*"
